--- a/res/layout/control_panel.xml
+++ b/res/layout/control_panel.xml
@@ -22,4 +22,20 @@
 			        android:layout_toRightOf="@id/send_1"
 			        android:onClick="send_2"/>
 				
+				<TextView
+				    android:id="@+id/textView"
+				    android:layout_width="300dp"
+				    android:layout_height="300dp"
+					android:layout_below="@id/send_1"
+				/>
+				
+				
+				<Button
+				    android:id="@+id/talkButton"
+				    android:layout_width="200dp"
+				    android:layout_height="200dp"
+				    android:text="TOK"
+				    android:layout_alignParentBottom="true"
+				/>
+								
 	       </RelativeLayout>
