fix spinner lag, fix immediate crash after closing program

--- a/res/layout/control_panel.xml
+++ b/res/layout/control_panel.xml
@@ -46,7 +46,7 @@
 	<ListView
 	    android:id="@+id/words"
 	    android:layout_width="fill_parent"
-	    android:layout_height="170dp"
+	    android:layout_height="fill_parent"
 		android:layout_below="@id/commands"
 	/>				
 	
