recognizer recovery will now happen much faster. updated "cycle" to "repetition"

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -28,8 +28,8 @@
 	<item>step 5</item>
 	<item>step 6</item>
 	<item>step 7</item>
-	<item>cycle 1</item>
-	<item>cycle 2</item>
+	<item>repetition 1</item>
+	<item>repetition 2</item>
 	
 	</array>
 </resources>
